--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -4,3 +4,10 @@ gem 'sinatra', '2.1.0'
 gem 'sinatra-contrib', '2.1.0'
 gem 'rack-cors'
 gem 'sinatra-cross_origin'
+gem 'rspec'
+gem 'pg'
+gem 'thin'
+gem 'puma'
+gem 'reel'
+gem 'http'
+gem 'webrick'
